# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: Shader.h  openWindow.cpp
